##-*- Mode: Change-Log; coding: utf-8; -*-
##
## Change log for perl distribution DTA::CAB

v1.114 Mon, 01 Mar 2021 15:45:44 +0100 moocow
	* added DTA::CAB::Chain::DE_free
	  - for use with (modified) Helsinki hfst-german FST from https://sourceforge.net/projects/hfst/files/resources/morphological-transducers
	* refactored DTA::CAB::Morph::Helsinki -> DTA::CAB::Morph::Helsinki::EN + DTA::CAB::Morph::Helsinki::DE

v1.113 Thu, 16 Jul 2020 15:42:53 +0200 moocow
	* added first-stab at DTA::CAB::Format:CONLLU conforming to https://universaldependencies.org/format.html
	  - optional special handling for some 'MISC' fields, including "json=JSON" for embedded TJ-format
	  - mostly based on TJ-format, with some "special fields"
	  - UNTESTED: development interrupted by svn server crash

v1.112 Mon, 30 Mar 2020 13:49:13 +0200 moocow
	* added %DTA::CAB::Analyzer::CLOSURE_CACHE - avoid re-compiling accessClosure() subs
	  - appears to fix memory-leak symptoms for Analyzer::Moot on debian stretch (perl 5.24.1)

v1.111 Thu, 23 Jan 2020 10:15:17 +0100 moocow
	* fixed normalized-key bug in DTA:CAB::Analyzer::DmootSub, ::MootSub
	  - earlier versions used normalized text as type-key ($dmoot->{tag},$moot->{word})
	  - old code caused bogus data-sharing for distinct input types mapped to same normalized form
 	  - bug observed for type-wise analysis of dwb1 lemmata ("aasz","asz") both mapped to "As", both assigned lemma ("aasz")
	    if processed in the same document, otherwise "asz" gets assigned lemma "asz"

v1.110 Mon, 23 Sep 2019 15:57:09 +0200 moocow
	* added http+unix support to dta-cab-check.perl
	* added CAB::Server::HTTP::Handler::sanitizeCharset() : tweak UTF-8 charset args to browser-friendly "utf-8"

v1.109 Tue, 26 Mar 2019 13:52:49 +0100 moocow
	* added Analyzer::DTAClean 'cleanPublic' option
	  - implements 'clean' option for public web-service
	  - still prunes 'unsafe' attributes (morph) including rwsub and dmootsub