@@ -2,6 +2,10 @@
 ##
 ## Change log for perl distribution DTA::CAB
 
+UNRELEASED
+Wed, 03 Mar 2021 14:09:32 +0100 moocow
+	* Morph::Helsinki::DE updated tag-extraction heuristics (use original FST label conventions <+NN>, <+V> etc.)
+
 v1.114 Mon, 01 Mar 2021 15:45:44 +0100 moocow
 	* added DTA::CAB::Chain::DE_free
 	  - for use with (modified) Helsinki hfst-german FST from https://sourceforge.net/projects/hfst/files/resources/morphological-transducers
